12_victoria-metrics/02-vm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: vm.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmsingle
                port:
                  number: 8428
